--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,7 @@
   "AzureOpenAI": {
     "Endpoint": "https://mao-foundry.openai.azure.com/",
     "Deployments": {
-      "Llm": "gpt-5-mini",
+      "Llm": "gpt-5",
       "Embeddings": "text-embedding-3-large"
     }
   }
