--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,9 @@
   "AzureOpenAI": {
     "Endpoint": "https://mao-foundry.openai.azure.com/",
     "Deployments": {
-      "Llm": "gpt-5",
+      "Llm": "gpt-4.1",
       "Embeddings": "text-embedding-3-large"
     }
-  }
+  },
+  "EnableAgentLogging": false
 }
