--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,7 @@
   "AzureOpenAI": {
     "Endpoint": "https://mao-foundry.openai.azure.com/",
     "Deployments": {
-      "Llm": "gpt-4.1",
-      "Embeddings": "text-embedding-3-large"
+      "Llm": "gpt-4.1"
     }
   },
   "EnableAgentLogging": false
